RESOLVED FIXED270997
Fix flaky Web Extension exception tests on debug
https://bugs.webkit.org/show_bug.cgi?id=270997
Summary Fix flaky Web Extension exception tests on debug
Brian Weinstein
Reported 2024-03-14 12:31:04 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-14 12:31:53 PDT
Brian Weinstein
Comment 2 2024-03-14 12:34:11 PDT
EWS
Comment 3 2024-03-14 16:21:51 PDT
Committed 276126@main (2a19d0288716): <https://commits.webkit.org/276126@main> Reviewed commits have been landed. Closing PR #25897 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.