Fix flaky Web Extension exception tests on debug https://bugs.webkit.org/show_bug.cgi?id=270997 rdar://124632659

Reviewed by Timothy Hatcher.

It appears that these error tests were timing out on the bots. This PR fixes them in two ways:
1) Upping the timeout on debug builds to 6 seconds (since debug builds are slower to run these tests)
2) Splitting the tests that are timing out into separate tests

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::scheduleBackgroundContentToUnload):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPICookies.mm:
(TestWebKitAPI::TEST):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIScripting.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/276126@main